--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -1,33 +1,39 @@
-@media screen and (max-width: 480px) {
-    .filter {
-        &__button-set {
-            display: flex;
-            flex-wrap: wrap;
-            margin-bottom: 40px;
-            margin-left: -8px;
-            margin-top: -15px;
-        }
-        &__item {
-            margin-left: 8px;
-            margin-top: 15px;
-        }
-        &__button {
-            background-color: $secondary-color;
-            color: $header-text-color;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.62;
-            letter-spacing: 0.03em;
-            padding: 6px 22px;
-            transition: background-color $transition-time $cubic,
-            color $transition-time $cubic, box-shadow $transition-time $cubic;
-            &:hover, &:focus {
-                background-color: $secondary-text-color;
-                color: $logo-white;
-                box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-                0px 1px 2px rgba(0, 0, 0, 0.08),
-                0px 2px 2px rgba(0, 0, 0, 0.12);
-            }
+.filter {
+    &__button-set {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 40px;
+        margin-left: -8px;
+        margin-top: -15px;
+    }
+    &__item {
+        margin-left: 8px;
+        margin-top: 15px;
+    }
+    &__button {
+        background-color: $secondary-color;
+        color: $header-text-color;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.62;
+        letter-spacing: 0.03em;
+        padding: 6px 22px;
+        transition: background-color $transition-time $cubic,
+        color $transition-time $cubic, box-shadow $transition-time $cubic;
+        &:hover, &:focus {
+            background-color: $secondary-text-color;
+            color: $logo-white;
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
         }
     }
+}
+@media screen and (min-width: 481px) {
+    .filter {
+        &__button-set {
+            justify-content: center;
+        }
+    }
+    
 }
