--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,58 +1,70 @@
 .hero {
-    height: auto;
-    background-color: $hero-footer-color;
+  height: auto;
+  background-color: $hero-footer-color;
+  text-align: center;
+  &__title {
+    color: $logo-white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    font-weight: 900;
     text-align: center;
-    &__title {
-        color: $logo-white;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 30px;
-        font-weight: 900;
-        text-align: center;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-    }
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
 }
 @media screen and (max-width: 768px) {
-    .hero {
-        padding-top: 118px;
-        padding-bottom: 118px;
-        &__title {
-            font-size: 26px;
-            line-height: 1.62;
-            max-width: 360px;
-            height: auto;
-
-        }
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+    &__title {
+      font-size: 26px;
+      line-height: 1.62;
+      max-width: 360px;
+      height: auto;
     }
+  }
 }
 @media screen and (min-width: 769px) {
-    .hero {
-        padding-top: 200px;
-        padding-bottom: 200px;
-        &__title {
-            font-size: 44px;
-            line-height: 1.36;
-            max-width: 696px;
-            height: auto;
-        }
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    &__title {
+      font-size: 44px;
+      line-height: 1.36;
+      max-width: 696px;
+      height: auto;
     }
+  }
 }
-
-
 
 .overlay {
-    
-    margin-left: auto;
-    margin-right: auto;    
-    background-image: linear-gradient(to right, $hero-overlay,$hero-overlay), url(../image/hero-photo.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-@media screen and (max-width: 480px) {
-    .overlay {
-        max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
+  background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
+    url(../../image/index/hero_mobile_1x.jpg);
+  @media screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
+      url(../../image/index/hero_mobile_2x.jpg);
+  }
+  @media screen and (min-width: 481px) {
+    background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
+      url(../../image/index/hero_tablet_1x.jpg);
+    @media screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
+        url(../../image/index/hero_tablet_2x.jpg);
     }
-    
+  }
+  @media screen and (min-width: 769px) {
+    background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
+      url(../../image/index/hero_pc_1x.jpg);
+    @media screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
+        url(../../image/index/hero_pc_2x.jpg);
+    }
+  }
 }
