--- a/css/main.css
+++ b/css/main.css
@@ -783,16 +783,20 @@ body {
   border: 1px solid #2196F3;
   fill: #2196F3;
 }
+@media screen and (max-width: 768px) {
+  .clients__item {
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
 @media screen and (max-width: 480px) {
   .clients__item {
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
   .clients__item {
-    margin-left: 30px;
-    margin-top: 30px;
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
   }
@@ -1078,25 +1082,10 @@ body {
   pointer-events: none;
 }
 
-@media screen and (max-width: 768px) {
-  .modal {
-    max-width: 450px;
-    min-height: 609px;
-  }
-  .modal__title {
-    line-height: 1.5;
-  }
-  .modal__policy {
-    font-size: 12px;
-    line-height: 1.16;
-  }
-}
 .modal {
   position: absolute;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
   left: 50%;
   top: 50%;
   padding: 40px;
@@ -1277,6 +1266,25 @@ body {
   fill: #2196F3;
 }
 
+@media screen and (max-width: 768px) {
+  .modal {
+    max-width: 450px;
+    min-height: 609px;
+  }
+  .modal__title {
+    line-height: 1.5;
+  }
+  .modal__policy {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+@media screen and (max-width: 769px) {
+  .modal {
+    width: 100%;
+    min-height: 581px;
+  }
+}
 .filter__button-set {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1346,7 +1354,8 @@ body {
   top: 1px;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
-  padding: 63px 24px;
+  padding-left: 24px;
+  padding-right: 24px;
   background-color: rgba(33, 150, 243, 0.9);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1396,6 +1405,14 @@ body {
   .service__item:last-child {
     margin-bottom: 0;
   }
+  .service__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
   .service__item {
@@ -1403,10 +1420,21 @@ body {
         flex-basis: calc(50% - 30px);
     height: 100%;
   }
+  .service__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 @media screen and (min-width: 769px) {
   .service__item {
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
+  }
+  .service__wrap {
+    padding: 63px 24px;
   }
 }/*# sourceMappingURL=main.css.map */
