--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,258 +1,263 @@
 .header {
-    border-bottom: 1px solid $header-border-color;
-    &__pages-link,
-    &__contacts-link {
-        transition: color $transition-time $cubic;
-        &:hover, &:focus {
-            color: $secondary-text-color;
-        }
+  border-bottom: 1px solid $header-border-color;
+  &__pages-link,
+  &__contacts-link {
+    transition: color $transition-time $cubic;
+    &:hover,
+    &:focus {
+      color: $secondary-text-color;
     }
-}        
-        
-@media screen and (max-width: 480px) {
-    .header {
-        &__container {
-            padding-top: 10px;
-            padding-bottom: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        &__mobile-menu {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            background-color: $logo-white;
-            padding: 48px 40px;
-            z-index: 1;
-        }
-        &__mobile-menu.is-open {
-            display: block;
-        }
-        &__nav {
-            margin-bottom: 302px;
-        }
-        &__pages-item {
-            margin-bottom: 30px;
-        }
-        
-        &__pages-item:last-child {
-            margin-bottom: 0;
-        }
-        &__contacts-icon {
-            display: none;
-        }
-        &__pages-list {
-            font-weight: 500;
-            font-size: 40px;
-            line-height: 1.175;
-            letter-spacing: 0.02em;
-            
-        }
-        &__pages-link {
-            color: $header-text-color;
-        }
-        &__pages-link--active {
-            color: $secondary-text-color;
-        }
-       
-        &__contacts-item {
-            font-weight: 500;
-            font-size: 34px;
-            line-height: 1.176;
-            letter-spacing: 0.02em;
-        }
-        &__contacts-list {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 64px;
-            
-        }
-        &__contacts-top {
-            order: -1;
-            margin-bottom: 32px;
-        }
-        &__contacts-bottom {
-            font-weight: 500;
-            font-size: 24px;
-            line-height: 1.166;
-            letter-spacing: 0.02em;
-            z-index: 9;
-        }
-        &__social-list {
-            display: flex;
-            flex-wrap: wrap;
-            margin-left: -10px;
-        }
-        &__social-item {
-            border-right: 1px solid rgba(33, 33, 33, 0.2);;
-        }
-        &__social-item:last-child {
-            border: none;
-        }
-        &__social-link {
-            color: $secondary-text-color;
-            font-weight: 500;
-            font-size: 18px;
-            line-height: 1.22;
-            letter-spacing: 0.02em;
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-        &__social-item:first-child {
-            padding-left: 0;
-        }
-    }
-    .burger {
-        &__button-menu {
-            position: relative;
-            border: none;
-            background-color: transparent;
-            padding: 0;
-            z-index: 2;
-        }
-        &__button-menu {
-            fill: $header-text-color;
-            transition: color $transition-time $cubic;
-        }
-        &__button-menu:hover,
-        &__button-menu:focus {
-            fill: $secondary-text-color;
-        }
-        &__close{
-            display: none;
-        }
-        &__button-menu.is-open .burger__close {
-            display: block;
-        }
-        &__button-menu.is-open .burger__menu {
-            display: none;
-        }
-    }
-    
-}
-@media screen and (min-width: 481px) {
-    .header {
-        &__social-list {
-            display: none;
-        }
-        &__mobile-menu {
-            display: flex;
-            align-items: center;
-        }
-        &__container, &__nav {
-            display: flex;
-            align-items: center;
-        }
-        &__pages-list {
-            display: flex;
-            width: 294px;
-            justify-content: space-between;
-            // max-margin-left: 88px;
-        }
-        &__pages-item {
-            justify-content: space-between;
-        }
-       
-        &__pages-link {
-            color: $header-text-color;
-            padding-top: 32px;
-            padding-bottom: 32px;
-            position: relative;
-            display: block;
-        }
-        &__pages-link--active {
-            color: $secondary-text-color;
-            &::after {
-                position: absolute;
-                display: block;
-                bottom: -1px;
-                content: "";
-                width: 100%;
-                height: 4px;
-                border-radius: 2px;
-                background-color: $secondary-text-color;
-            }
-        }
-        &__contacts-link {
-            display: flex;
-            align-items: center;
-        }
-        &__contacts-icon {
-            margin-right: 10px;
-            fill: currentColor;
-        }
-        .burger__button-menu {
-            display: none;
-        }
-    }
-}
-        
-    
-@media screen and (min-width: 481px) and (max-width: 768px) {
-    .header {
-        &__container {
-            max-width: 100%;
-            position: relative;
-        }
-        &__pages-list {
-            justify-content: space-between;
-        }
-        &__pages-link,
-        &__contacts-link {
-            font-weight: 500;
-            line-height: 1.14;
-            letter-spacing: 0.02em;
-            transition: color $transition-time $cubic;
-            &:hover, &:focus {
-                color: $secondary-text-color;
-            }
-        }
-        &__mobile-menu {
-            margin-left: 88px;
-            justify-content: space-between;
-        }
-        &__contacts-list {
-            margin-left: 84px;
-        }
-   
-        &__contacts-link {
-            font-size: 12px;
-        }
-        &__contacts-item {
-            margin-bottom: 10px;
-        }
-        &__contacts-item:last-child {
-            margin-bottom: 0;
-        }
-    }
-}
-@media screen and (min-width: 769px) {
-    .header {        
-        &__container {
-            justify-content: center;
-        }
-        &__contacts-list {
-            display: flex;
-            margin-left: 300px;
-        }
-        &__contacts-item {
-            margin-right: 30px;
-        }
-        &__contacts-item:last-child {
-            margin-right: 0;
-        }
-        &__nav {
-            margin-left: 93px;
-        }
-        &__pages-link,
-        &__contacts-link {
-            font-weight: 500;
-        }
-    }
-    
+  }
 }
 
+@media screen and (max-width: 480px) {
+  .header {
+    &__container {
+      max-width: 480px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    &__mobile-menu {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: $logo-white;
+      padding: 48px 40px;
+      z-index: 1;
+    }
+    &__mobile-menu.is-open {
+      display: block;
+    }
+    &__nav {
+      margin-bottom: 302px;
+    }
+    &__pages-item {
+      margin-bottom: 30px;
+    }
+
+    &__pages-item:last-child {
+      margin-bottom: 0;
+    }
+    &__contacts-icon {
+      display: none;
+    }
+    &__pages-list {
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 1.175;
+      letter-spacing: 0.02em;
+    }
+    &__pages-link {
+      color: $header-text-color;
+    }
+    &__pages-link--active {
+      color: $secondary-text-color;
+    }
+
+    &__contacts-item {
+      font-weight: 500;
+      font-size: 34px;
+      line-height: 1.176;
+      letter-spacing: 0.02em;
+    }
+    &__contacts-list {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 64px;
+    }
+    &__contacts-top {
+      order: -1;
+      margin-bottom: 32px;
+    }
+    &__contacts-bottom {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 1.166;
+      letter-spacing: 0.02em;
+      z-index: 9;
+    }
+    &__social-list {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -10px;
+    }
+    &__social-item {
+      border-right: 1px solid rgba(33, 33, 33, 0.2);
+    }
+    &__social-item:last-child {
+      border: none;
+    }
+    &__social-link {
+      color: $secondary-text-color;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 1.22;
+      letter-spacing: 0.02em;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+    &__social-item:first-child {
+      padding-left: 0;
+    }
+  }
+  .burger {
+    &__button-menu {
+      position: relative;
+      border: none;
+      background-color: transparent;
+      padding: 0;
+      z-index: 2;
+    }
+    &__button-menu {
+      fill: $header-text-color;
+      transition: color $transition-time $cubic;
+    }
+    &__button-menu:hover,
+    &__button-menu:focus {
+      fill: $secondary-text-color;
+    }
+    &__close {
+      display: none;
+    }
+    &__button-menu.is-open .burger__close {
+      display: block;
+    }
+    &__button-menu.is-open .burger__menu {
+      display: none;
+    }
+  }
+}
+@media screen and (min-width: 481px) {
+  .header {
+    &__container {
+      width: 768px;
+    }
+    &__social-list {
+      display: none;
+    }
+    &__mobile-menu {
+      display: flex;
+      align-items: center;
+    }
+    &__container,
+    &__nav {
+      display: flex;
+      align-items: center;
+    }
+    &__pages-list {
+      display: flex;
+      width: 294px;
+      justify-content: space-between;
+      // max-margin-left: 88px;
+    }
+    &__pages-item {
+      justify-content: space-between;
+    }
+
+    &__pages-link {
+      color: $header-text-color;
+      padding-top: 32px;
+      padding-bottom: 32px;
+      position: relative;
+      display: block;
+    }
+    &__pages-link--active {
+      color: $secondary-text-color;
+      &::after {
+        position: absolute;
+        display: block;
+        bottom: -1px;
+        content: '';
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: $secondary-text-color;
+      }
+    }
+    &__contacts-link {
+      display: flex;
+      align-items: center;
+    }
+    &__contacts-icon {
+      margin-right: 10px;
+      fill: currentColor;
+    }
+    .burger__button-menu {
+      display: none;
+    }
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .header {
+    &__container {
+      max-width: 100%;
+      position: relative;
+    }
+    &__pages-list {
+      justify-content: space-between;
+    }
+    &__pages-link,
+    &__contacts-link {
+      font-weight: 500;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+      transition: color $transition-time $cubic;
+      &:hover,
+      &:focus {
+        color: $secondary-text-color;
+      }
+    }
+    &__mobile-menu {
+      margin-left: 88px;
+      justify-content: space-between;
+    }
+    &__contacts-list {
+      margin-left: 84px;
+    }
+
+    &__contacts-link {
+      font-size: 12px;
+    }
+    &__contacts-item {
+      margin-bottom: 10px;
+    }
+    &__contacts-item:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+@media screen and (min-width: 769px) {
+  .header {
+    &__container {
+      width: 1200px;
+    }
+    &__contacts-list {
+      display: flex;
+      margin-left: 305px;
+      align-items: center;
+    }
+    &__contacts-item {
+      margin-right: 30px;
+      margin-bottom: 0;
+    }
+    &__contacts-item:last-child {
+      margin-right: 0;
+    }
+    &__mobile-menu {
+      margin-left: 93px;
+    }
+
+    &__contacts-link {
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+    }
+  }
+}
