--- a/css/main.css
+++ b/css/main.css
@@ -45,62 +45,53 @@ body {
   overflow: hidden;
 }
 
-.section__title {
-  color: #212121;
-  text-align: center;
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-
-@media screen and (max-width: 480px) {
-  .section__title {
-    color: #212121;
-    font-size: 28px;
-    line-height: 1.17;
-    margin-bottom: 30px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-bottom: 30px;
-  }
-  .section__title {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
   }
+}
+.section__title {
+  color: #212121;
+  text-align: center;
+  font-size: 28px;
+  line-height: 1.17;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
   .section__title {
     font-size: 36px;
-    line-height: 1.166;
     margin-bottom: 50px;
   }
 }
+
 .container {
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
-
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .container {
-    max-width: 480px;
+    width: 480px;
   }
 }
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
   }
 }
+
 .logo {
   font-family: "Raleway", sans-serif;
   color: #2196F3;
@@ -186,21 +177,83 @@ body {
 .header__pages-link:hover, .header__pages-link:focus, .header__contacts-link:hover, .header__contacts-link:focus {
   color: #2196F3;
 }
+.header__container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__contacts-icon {
+  display: none;
+}
+.header__pages-link {
+  color: #212121;
+}
+.header__pages-link--active {
+  color: #2196F3;
+}
+.header__contacts-item {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+}
+.header__contacts-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.header__contacts-top {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+  margin-bottom: 32px;
+}
+.header__contacts-bottom {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+  z-index: 9;
+}
+.header__social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+}
+.header__social-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 5px;
+}
+.header__social-link {
+  color: #2196F3;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+}
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .header__container {
     max-width: 480px;
     padding-top: 10px;
     padding-bottom: 10px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .header__contacts-list {
+    margin-bottom: 64px;
   }
   .header__mobile-menu {
     display: none;
@@ -216,17 +269,11 @@ body {
   .header__mobile-menu.is-open {
     display: block;
   }
-  .header__nav {
-    margin-bottom: 302px;
-  }
   .header__pages-item {
     margin-bottom: 30px;
   }
   .header__pages-item:last-child {
     margin-bottom: 0;
-  }
-  .header__contacts-icon {
-    display: none;
   }
   .header__pages-list {
     font-weight: 500;
@@ -234,94 +281,33 @@ body {
     line-height: 1.175;
     letter-spacing: 0.02em;
   }
-  .header__pages-link {
-    color: #212121;
-  }
-  .header__pages-link--active {
-    color: #2196F3;
-  }
-  .header__contacts-item {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.176;
-    letter-spacing: 0.02em;
-  }
-  .header__contacts-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-bottom: 64px;
-  }
-  .header__contacts-top {
-    -webkit-box-ordinal-group: 0;
-        -ms-flex-order: -1;
-            order: -1;
-    margin-bottom: 32px;
-  }
-  .header__contacts-bottom {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 1.166;
-    letter-spacing: 0.02em;
-    z-index: 9;
-  }
-  .header__social-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-left: -10px;
-  }
-  .header__social-item {
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-  }
-  .header__social-item:last-child {
-    border: none;
-  }
-  .header__social-link {
-    color: #2196F3;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.22;
-    letter-spacing: 0.02em;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .header__social-item:first-child {
-    padding-left: 0;
-  }
-
-  .burger__button-menu {
-    position: relative;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    z-index: 2;
-  }
-  .burger__button-menu {
-    fill: #212121;
-    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .burger__button-menu:hover, .burger__button-menu:focus {
-    fill: #2196F3;
-  }
-  .burger__close {
-    display: none;
-  }
-  .burger__button-menu.is-open .burger__close {
-    display: block;
-  }
-  .burger__button-menu.is-open .burger__menu {
-    display: none;
-  }
 }
-@media screen and (min-width: 481px) {
+.burger__button-menu {
+  position: relative;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  z-index: 2;
+}
+.burger__button-menu {
+  fill: #212121;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.burger__button-menu:hover, .burger__button-menu:focus {
+  fill: #2196F3;
+}
+.burger__close {
+  display: none;
+}
+.burger__button-menu.is-open .burger__close {
+  display: block;
+}
+.burger__button-menu.is-open .burger__menu {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
   .header__container {
     width: 768px;
   }
@@ -394,7 +380,7 @@ body {
     display: none;
   }
 }
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 768px) {
   .header__container {
     max-width: 100%;
     position: relative;
@@ -433,7 +419,7 @@ body {
     margin-bottom: 0;
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .header__container {
     width: 1200px;
   }
@@ -502,8 +488,14 @@ body {
   height: auto;
   background-color: #2F303A;
   text-align: center;
+  padding-top: 118px;
+  padding-bottom: 118px;
 }
 .hero__title {
+  font-size: 26px;
+  line-height: 1.62;
+  max-width: 360px;
+  height: auto;
   color: #FFFFFF;
   margin-left: auto;
   margin-right: auto;
@@ -514,19 +506,7 @@ body {
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 768px) {
-  .hero {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-  .hero__title {
-    font-size: 26px;
-    line-height: 1.62;
-    max-width: 360px;
-    height: auto;
-  }
-}
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -578,22 +558,42 @@ body {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .benefits__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
 .benefits {
   padding-bottom: 0;
 }
-.benefits__item {
-  margin-bottom: 30px;
+.benefits__list {
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
-.benefits__item:last-child {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .benefits__item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__item {
+    -ms-flex-preferred-size: calc(25% - 30px);
+        flex-basis: calc(25% - 30px);
+  }
 }
 .benefits__title {
   color: #212121;
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .benefits__title {
+    text-align: center;
+  }
 }
 .benefits__icon-wrapper {
   height: 120px;
@@ -608,49 +608,6 @@ body {
   margin-right: auto;
 }
 
-@media screen and (max-width: 480px) {
-  .benefits {
-    padding-bottom: 0;
-  }
-  .benefits__item {
-    margin-bottom: 30px;
-  }
-  .benefits__item:last-child {
-    margin-bottom: 0;
-  }
-  .benefits__title {
-    color: #212121;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-  }
-  .benefits__icon-wrapper {
-    height: 120px;
-    background-color: #F5F4FA;
-    border-radius: 4px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    margin-bottom: 30px;
-  }
-  .benefits__icon {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media screen and (min-width: 481px) {
-  .benefits__item {
-    -ms-flex-preferred-size: calc(50% - 30px);
-        flex-basis: calc(50% - 30px);
-  }
-}
-@media screen and (min-width: 769px) {
-  .benefits__item {
-    -ms-flex-preferred-size: calc(25% - 30px);
-        flex-basis: calc(25% - 30px);
-  }
-}
 @media screen and (max-width: 768px) {
   .examples {
     display: none;
@@ -684,72 +641,68 @@ body {
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 480px) {
-  .card-set {
-    display: block;
-  }
+.card-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
 }
-@media screen and (min-width: 481px) {
-  .card-set {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
-  .card-set__item {
-    margin-left: 30px;
-    margin-top: 30px;
-  }
+.card-set__item {
+  margin-left: 30px;
+  margin-top: 30px;
 }
-@media screen and (min-width: 320px) {
-  .team {
-    background-color: #F5F4FA;
-  }
-  .team__item {
-    background: #FFFFFF;
-    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    text-align: center;
-  }
-  .team__content {
-    padding: 30px 15px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+
+.team {
+  background-color: #F5F4FA;
+}
+.team__item {
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  max-width: 450px;
+}
+.team__content {
+  padding: 30px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.team__member {
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  margin-bottom: 10px;
+}
+.team__job {
+  font-size: 16px;
+  line-height: 1.18;
+  margin-bottom: 16px;
+}
+
+@media screen and (max-width: 767px) {
+  .team .card-set {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .team__member {
-    color: #212121;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    margin-bottom: 10px;
-  }
-  .team__job {
-    font-size: 16px;
-    line-height: 1.18;
-    margin-bottom: 16px;
   }
 }
-@media screen and (max-width: 767px) {
-  .team__item {
-    margin-bottom: 30px;
-  }
-  .team__item:last-child {
-    margin-bottom: 0;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .team__item {
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
@@ -794,11 +747,9 @@ body {
   border: 1px solid #2196F3;
   fill: #2196F3;
 }
-@media screen and (max-width: 480px) {
-  .clients__item {
-    margin-left: 30px;
-    margin-top: 30px;
-  }
+.clients__item {
+  -ms-flex-preferred-size: calc(50% - 30px);
+      flex-basis: calc(50% - 30px);
 }
 @media screen and (max-width: 480px) {
   .clients__item {
@@ -806,13 +757,13 @@ body {
         flex-basis: calc(50% - 30px);
   }
 }
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .clients__item {
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .clients__item {
     -ms-flex-preferred-size: calc(16.6666666667% - 30px);
         flex-basis: calc(16.6666666667% - 30px);
@@ -841,7 +792,7 @@ body {
   margin-left: 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .footer-address__item:not(:last-child) {
     margin-bottom: 9px;
   }
@@ -863,7 +814,7 @@ body {
     max-width: 100%;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer {
     text-align: center;
   }
@@ -944,7 +895,7 @@ body {
     color: rgba(255, 255, 255, 0.6);
   }
 }
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -969,7 +920,7 @@ body {
     width: 450px;
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .footer {
     background-color: #2F303A;
     padding-top: 60px;
