--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,19 +1,32 @@
+@media screen and (max-width: 767px) {
+    .benefits {
+        &__list {
+            flex-wrap: nowrap;
+        }
+    }
+}
 .benefits {
     padding-bottom: 0;
+    &__list {
+        flex-wrap: nowrap;
+    }
     &__item {
-        margin-bottom: 30px;
+        @media screen and (min-width: 768px) {
+            flex-basis: calc(100% / 2 - 30px);
+        }
+        @media screen and (min-width: 1200px) {
+            flex-basis: calc(100% / 4 - 30px);
+        }
     }
-    &__item:last-child {
-        margin-bottom: 0;
-    }
-   
     &__title {
         color: $header-text-color;
         font-size: 14px;
         line-height: 1.14;
-        text-align: center;
         text-transform: uppercase;
         margin-bottom: 10px;
+        @media screen and (max-width: 767px) {
+            text-align: center;
+        }
     }
     &__icon-wrapper {
         height: 120px;
@@ -26,51 +39,5 @@
     &__icon {
         margin-left: auto;;
         margin-right: auto;
-    }
-}
-@media screen and (max-width: 480px) {
-    .benefits {
-        padding-bottom: 0;
-        &__item {
-            margin-bottom: 30px;
-        }
-        &__item:last-child {
-            margin-bottom: 0;
-        }
-       
-        &__title {
-            color: $header-text-color;
-            font-size: 14px;
-            line-height: 1.14;
-            text-align: center;
-            text-transform: uppercase;
-            margin-bottom: 10px;
-        }
-        &__icon-wrapper {
-            height: 120px;
-            background-color: $secondary-color;
-            border-radius: 4px;
-            padding-top: 25px;
-            padding-bottom: 25px;
-            margin-bottom: 30px;
-        }
-        &__icon {
-            margin-left: auto;;
-            margin-right: auto;
-        }
-    }
-}
-@media screen and (min-width: 481px) {
-    .benefits {
-        &__item {
-            flex-basis: calc(100% / 2 - 30px);
-        }
-    }
-}
-@media screen and (min-width: 769px) {
-    .benefits {
-        &__item {
-            flex-basis: calc(100% / 4 - 30px);
-        }
     }
 }
