--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -22,17 +22,14 @@
     }
   }
   &__item {
-    @media screen and (max-width: 480px) {
-      margin-left: 30px;
-      margin-top: 30px;
-    }
+    flex-basis: calc(100% / 2 - 30px);
     @media screen and (max-width: 480px) {
       flex-basis: calc(100% / 2 - 30px);
     }
-    @media screen and (min-width: 481px) and (max-width: 768px) {
+    @media screen and (min-width: 768px) {
       flex-basis: calc(100% / 3 - 30px);
     }
-    @media screen and (min-width: 769px) {
+    @media screen and (min-width: 1200px) {
       flex-basis: calc(100% / 6 - 30px);
     }
   }
