--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,46 +1,39 @@
-@media screen and (min-width: 320px) {
-  .team {
-    background-color: $secondary-color;
-    &__item {
-      background: $logo-white;
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-      border-radius: 0px 0px 4px 4px;
-      text-align: center;
-    }
-    &__content {
-      padding: 30px 15px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    &__member {
-      color: $header-text-color;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.18;
-      margin-bottom: 10px;
-    }
-    &__job {
-      font-size: 16px;
-      line-height: 1.18;
-      margin-bottom: 16px;
-    }
+.team {
+  background-color: $secondary-color;
+  &__item {
+    background: $logo-white;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    text-align: center;
+    max-width: 450px;
+  }
+  &__content {
+    padding: 30px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__member {
+    color: $header-text-color;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    margin-bottom: 10px;
+  }
+  &__job {
+    font-size: 16px;
+    line-height: 1.18;
+    margin-bottom: 16px;
   }
 }
-
 @media screen and (max-width: 767px) {
-  .team {
-    &__item {
-      margin-bottom: 30px;
-    }
-    &__item:last-child {
-      margin-bottom: 0;
-    }
+  .team .card-set {
+    flex-wrap: nowrap;
+    flex-direction: column;
   }
 }
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .team {
     &__item {
       flex-basis: calc(100% / 2 - 30px);
