--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -6,7 +6,7 @@
     }
 }
 .benefits {
-    padding-bottom: 0;
+    
     &__list {
         flex-wrap: nowrap;
     }
@@ -39,5 +39,10 @@
     &__icon {
         margin-left: auto;;
         margin-right: auto;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .benefits {
+        padding-bottom: 0;
     }
 }
