--- a/css/main.css
+++ b/css/main.css
@@ -210,12 +210,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.header__contacts-top {
-  -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-          order: -1;
-  margin-bottom: 32px;
-}
 .header__contacts-bottom {
   font-weight: 500;
   font-size: 24px;
@@ -243,7 +237,12 @@ body {
   letter-spacing: 0.02em;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__contacts-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 768px) {
   .header__container {
     max-width: 480px;
     padding-top: 10px;
@@ -251,6 +250,12 @@ body {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .header__contacts-top {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-bottom: 32px;
   }
   .header__contacts-list {
     margin-bottom: 64px;
@@ -310,6 +315,7 @@ body {
 @media screen and (min-width: 768px) {
   .header__container {
     width: 768px;
+    position: relative;
   }
   .header__social-list {
     display: none;
@@ -321,6 +327,10 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-left: 88px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .header__container, .header__nav {
     display: -webkit-box;
@@ -339,10 +349,23 @@ body {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+  .header__contacts-list {
+    margin-left: 84px;
+  }
   .header__pages-item {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .header__pages-link, .header__contacts-link {
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__pages-link:hover, .header__pages-link:focus, .header__contacts-link:hover, .header__contacts-link:focus {
+    color: #2196F3;
   }
   .header__pages-link {
     color: #212121;
@@ -371,52 +394,15 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    font-size: 12px;
   }
   .header__contacts-icon {
+    display: block;
     margin-right: 10px;
     fill: currentColor;
   }
   .header .burger__button-menu {
     display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .header__container {
-    max-width: 100%;
-    position: relative;
-  }
-  .header__pages-list {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .header__pages-link, .header__contacts-link {
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .header__pages-link:hover, .header__pages-link:focus, .header__contacts-link:hover, .header__contacts-link:focus {
-    color: #2196F3;
-  }
-  .header__mobile-menu {
-    margin-left: 88px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .header__contacts-list {
-    margin-left: 84px;
-  }
-  .header__contacts-link {
-    font-size: 12px;
-  }
-  .header__contacts-item {
-    margin-bottom: 10px;
-  }
-  .header__contacts-item:last-child {
-    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -431,6 +417,10 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   .header__contacts-item {
     margin-right: 30px;
@@ -533,25 +523,25 @@ body {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/index/hero_mobile_2x.jpg);
   }
 }
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 768px) {
   .overlay {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/index/hero_tablet_1x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/index/hero_tablet_1x.jpg);
   }
 }
-@media screen and (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 481px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .overlay {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/index/hero_tablet_2x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/index/hero_tablet_2x.jpg);
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .overlay {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/index/hero_pc_1x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/index/hero_pc_1x.jpg);
   }
 }
-@media screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .overlay {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/index/hero_pc_2x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/index/hero_pc_2x.jpg);
@@ -563,9 +553,6 @@ body {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
-}
-.benefits {
-  padding-bottom: 0;
 }
 .benefits__list {
   -ms-flex-wrap: nowrap;
@@ -608,39 +595,47 @@ body {
   margin-right: auto;
 }
 
-@media screen and (max-width: 768px) {
-  .examples {
-    display: none;
+@media screen and (min-width: 1200px) {
+  .benefits {
+    padding-bottom: 0;
   }
 }
-.examples__item {
-  position: relative;
-  -ms-flex-preferred-size: calc(33.3333333333% - 30px);
-      flex-basis: calc(33.3333333333% - 30px);
-}
-.examples__wrap {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: rgba(47, 48, 58, 0.8);
-}
-.examples__title {
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: #FFFFFF;
+.examples {
+  display: none;
 }
 
+@media screen and (min-width: 1200px) {
+  .examples {
+    display: block;
+  }
+  .examples__item {
+    position: relative;
+    -ms-flex-preferred-size: calc(33.3333333333% - 30px);
+        flex-basis: calc(33.3333333333% - 30px);
+  }
+  .examples__wrap {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: rgba(47, 48, 58, 0.8);
+  }
+  .examples__title {
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+}
 .card-set {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -691,21 +686,27 @@ body {
   line-height: 1.18;
   margin-bottom: 16px;
 }
-
-@media screen and (max-width: 767px) {
-  .team .card-set {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
+.team .card-set {
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 @media screen and (min-width: 768px) {
   .team__item {
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
+  }
+  .team .card-set {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 @media screen and (min-width: 1200px) {
