--- a/sass/layout/_examples.scss
+++ b/sass/layout/_examples.scss
@@ -1,27 +1,28 @@
-@media screen and (max-width: 768px) {
-    .examples {
-        display: none;
-    }
-}
 .examples {
-    &__item {
-        position: relative;
-        flex-basis: calc(100% /3 - 30px);
-    }
-    &__wrap {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 70px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: $examples-background;
-    }
-    &__title {
-        font-size: 14px;
-        line-height: 1.14;
-        text-transform: uppercase;
-        color: $logo-white;
+    display: none;
+}
+@media screen and (min-width: 1200px) {
+    .examples {
+        display: block;
+        &__item {
+            position: relative;
+            flex-basis: calc(100% /3 - 30px);
+        }
+        &__wrap {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: $examples-background;
+        }
+        &__title {
+            font-size: 14px;
+            line-height: 1.14;
+            text-transform: uppercase;
+            color: $logo-white;
+        }
     }
 }
