--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -26,17 +26,20 @@
     line-height: 1.18;
     margin-bottom: 16px;
   }
-}
-@media screen and (max-width: 767px) {
-  .team .card-set {
+  & .card-set {
     flex-wrap: nowrap;
     flex-direction: column;
   }
 }
+
 @media screen and (min-width: 768px) {
   .team {
     &__item {
       flex-basis: calc(100% / 2 - 30px);
+    }
+    & .card-set {
+      flex-wrap: wrap;
+      flex-direction: row;
     }
   }
 }
