--- a/css/main.css
+++ b/css/main.css
@@ -178,13 +178,17 @@ body {
   color: #2196F3;
 }
 .header__container {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .header__contacts-icon {
   display: none;
@@ -200,6 +204,9 @@ body {
   font-size: 34px;
   line-height: 1.176;
   letter-spacing: 0.02em;
+}
+.header__contacts-item:not(:last-child) {
+  margin-bottom: 10px;
 }
 .header__contacts-list {
   display: -webkit-box;
@@ -236,57 +243,42 @@ body {
   line-height: 1.22;
   letter-spacing: 0.02em;
 }
+.header__contacts-top {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+  margin-bottom: 32px;
+}
+.header__contacts-list {
+  margin-bottom: 64px;
+}
+.header__mobile-menu {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #FFFFFF;
+  padding: 48px 40px;
+  z-index: 1;
+}
+.header__mobile-menu.is-open {
+  display: block;
+}
+.header__pages-item {
+  margin-bottom: 30px;
+}
+.header__pages-item:last-child {
+  margin-bottom: 0;
+}
+.header__pages-list {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+}
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .header__contacts-item:not(:last-child) {
-    margin-bottom: 10px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .header__container {
-    max-width: 480px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .header__contacts-top {
-    -webkit-box-ordinal-group: 0;
-        -ms-flex-order: -1;
-            order: -1;
-    margin-bottom: 32px;
-  }
-  .header__contacts-list {
-    margin-bottom: 64px;
-  }
-  .header__mobile-menu {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #FFFFFF;
-    padding: 48px 40px;
-    z-index: 1;
-  }
-  .header__mobile-menu.is-open {
-    display: block;
-  }
-  .header__pages-item {
-    margin-bottom: 30px;
-  }
-  .header__pages-item:last-child {
-    margin-bottom: 0;
-  }
-  .header__pages-list {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-  }
-}
 .burger__button-menu {
   position: relative;
   border: none;
@@ -316,11 +308,16 @@ body {
   .header__container {
     width: 768px;
     position: relative;
+    padding-top: 0;
+    padding-bottom: 0;
   }
   .header__social-list {
     display: none;
   }
   .header__mobile-menu {
+    position: static;
+    height: auto;
+    padding: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -340,6 +337,12 @@ body {
         -ms-flex-align: center;
             align-items: center;
   }
+  .header__contacts-top {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    margin-bottom: 0px;
+  }
   .header__pages-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -348,14 +351,19 @@ body {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
   }
   .header__contacts-list {
-    margin-left: 84px;
+    margin-bottom: 0;
   }
   .header__pages-item {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    margin-bottom: 0;
   }
   .header__pages-link, .header__contacts-link {
     font-weight: 500;
@@ -413,7 +421,6 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: 305px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -424,6 +431,8 @@ body {
   }
   .header__contacts-item {
     margin-right: 30px;
+  }
+  .header .header__contacts-item:not(:last-child) {
     margin-bottom: 0;
   }
   .header__contacts-item:last-child {
